--- a/latex/main.tex
+++ b/latex/main.tex
@@ -214,8 +214,8 @@ The goal of this dissertation if to do a trade-off over the different deep learn
 
 \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
+\textbf{RUL} & \textbf{R}emaining \textbf{U}seful \textbf{L}ife\\
+\textbf{RNN} & \textbf{R}ecurrent \textbf{N}eural \textbf{N}etwork\\
 
 \end{abbreviations}
 
@@ -266,8 +266,8 @@ The goal of this dissertation if to do a trade-off over the different deep learn
 % Uncomment the lines as you write the chapters
 
 \input{Chapters/Chapter1}
-%\input{Chapters/Chapter2}
-%\input{Chapters/Chapter3}
+\input{Chapters/Chapter2}
+\input{Chapters/Chapter3}
 %\input{Chapters/Chapter4}
 %\input{Chapters/Chapter5}
 
