--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -31,3 +31,13 @@
     howpublished = {\url {https://github.com/umbertogriffo/Predictive-Maintenance-using-LSTM}},
     commit = {49413fea7576a340d363f8d8f4a2cfb5cacf3fcd}
 }
+
+@misc{
+    Reference4,
+    organization = {Colah's Blog},
+    title = {Understanding LSTMs},
+    month = {8},
+    year = {2015},
+    url = {https://colah.github.io/posts/2015-08-Understanding-LSTMs/},
+    urldate = {2020-07-01}
+}
