--- a/latex/main.tex
+++ b/latex/main.tex
@@ -268,7 +268,7 @@ The goal of this dissertation if to do a trade-off over the different deep learn
 \input{Chapters/Chapter1}
 \input{Chapters/Chapter2}
 \input{Chapters/Chapter3}
-%\input{Chapters/Chapter4}
+\input{Chapters/Chapter4}
 %\input{Chapters/Chapter5}
 
 %----------------------------------------------------------------------------------------
