LSTM chapter completed

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -41,3 +41,13 @@
     url = {https://colah.github.io/posts/2015-08-Understanding-LSTMs/},
     urldate = {2020-07-01}
 }
+
+@misc{
+    Reference5,
+    author = {Kyunghyun Cho et al},
+    title = {Learning Phrase Representations using RNN Encoder–Decoder
+for Statistical Machine Translation},
+    month = {9},
+    year = {2015},
+    url = {https://arxiv.org/pdf/1406.1078v3.pdf}
+}
