First version completed

--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -44,10 +44,17 @@
 
 @misc{
     Reference5,
-    author = {Kyunghyun Cho et al},
+    author = {Kyunghyun Cho},
     title = {Learning Phrase Representations using RNN Encoder–Decoder
 for Statistical Machine Translation},
     month = {9},
     year = {2015},
     url = {https://arxiv.org/pdf/1406.1078v3.pdf}
+}
+
+@book{Reference6,
+    author = {François Chollet},
+    title = {Deep Learning With Python},
+    publisher = {Manning},
+    year = {2018}
 }
