--- a/latex/Appendices/AppendixA.tex
+++ b/latex/Appendices/AppendixA.tex
@@ -1,25 +1,13 @@
 % Appendix A
 
-\chapter{Frequently Asked Questions} % Main appendix title
+\chapter{Code And Templates} % Main appendix title
 
 \label{AppendixA} % For referencing this appendix elsewhere, use \ref{AppendixA}
 
-\section{How do I change the colors of links?}
+\section{Source code}
 
-The color of links can be changed to your liking using:
+All the code used for the implementation of this dissertation can be found on this GitHub \href{https://github.com/hperezblasco/mbit-tfm}{repository}.
 
-{\small\verb!\hypersetup{urlcolor=red}!}, or
+\section{Template}
 
-{\small\verb!\hypersetup{citecolor=green}!}, or
-
-{\small\verb!\hypersetup{allcolor=blue}!}.
-
-\noindent If you want to completely hide the links, you can use:
-
-{\small\verb!\hypersetup{allcolors=.}!}, or even better: 
-
-{\small\verb!\hypersetup{hidelinks}!}.
-
-\noindent If you want to have obvious links in the PDF but not the printed text, use:
-
-{\small\verb!\hypersetup{colorlinks=false}!}.
+This dissertation was written using \textit{LaTex} based on the Master/Doctoral Thesis template made by Steve R. Gunn and Sunil Patel. The template can be found \href{https://www.latextemplates.com/template/masters-doctoral-thesis}{here}.
