--- a/latex/main.tex
+++ b/latex/main.tex
@@ -152,7 +152,7 @@ Predictive maintenance encompasses a variety of topics, including but not limite
 Predictive Maintenance is also a domain where data is collected over time to monitor the state of an asset with the goal of finding patterns to predict failures which can also benefit from certain deep learning algorithms.
 This study uses simulated aircraft sensor values to predict when an aircraft engine will fail in the future so that maintenance can be planned in advance.
 
-The goal of this dissertation if to do a trade-off over the different deep learning architectures and models that compound the current state of the art concerning the prediction and classification over time series data.
+The goal of this dissertation is to do a trade-off over the different deep learning architectures and models that compound the current state of the art concerning the prediction and classification over time series data.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -186,6 +186,7 @@ The goal of this dissertation if to do a trade-off over the different deep learn
 \textbf{GRU} & \textbf{G}ated \textbf{R}ecurrent \textbf{U}nit\\
 \textbf{MAE} & \textbf{M}ean \textbf{A}bsolut \textbf{E}rror\\
 \textbf{PCA} & \textbf{P}rincipal \textbf{C}omponent \textbf{A}nalysis\\
+\textbf{NLP} & \textbf{N}atural \textbf{L}anguage \textbf{P}rocessing\\
 
 \end{abbreviations}
 
