--- a/src/notebook/Predictive_Maintenance_using_LSTM.ipynb
+++ b/src/notebook/Predictive_Maintenance_using_LSTM.ipynb
@@ -21,30 +21,30 @@
        " memory_limit: 268435456\n",
        " locality {\n",
        " }\n",
-       " incarnation: 4245928256809945664,\n",
+       " incarnation: 10013982652509194334,\n",
        " name: \"/device:XLA_CPU:0\"\n",
        " device_type: \"XLA_CPU\"\n",
        " memory_limit: 17179869184\n",
        " locality {\n",
        " }\n",
-       " incarnation: 18244616570960676952\n",
+       " incarnation: 18165778023631011169\n",
        " physical_device_desc: \"device: XLA_CPU device\",\n",
        " name: \"/device:GPU:0\"\n",
        " device_type: \"GPU\"\n",
-       " memory_limit: 7195918336\n",
+       " memory_limit: 7172882432\n",
        " locality {\n",
        "   bus_id: 1\n",
        "   links {\n",
        "   }\n",
        " }\n",
-       " incarnation: 4050216246434011776\n",
+       " incarnation: 13968849056008460452\n",
        " physical_device_desc: \"device: 0, name: GeForce RTX 2080 with Max-Q Design, pci bus id: 0000:01:00.0, compute capability: 7.5\",\n",
        " name: \"/device:XLA_GPU:0\"\n",
        " device_type: \"XLA_GPU\"\n",
        " memory_limit: 17179869184\n",
        " locality {\n",
        " }\n",
-       " incarnation: 3514515706112739715\n",
+       " incarnation: 9786441539489131263\n",
        " physical_device_desc: \"device: XLA_GPU device\"]"
       ]
      },
@@ -123,13 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "JjbfnUZGgc3C"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(20631, 26)\n",
+      "(13096, 26)\n",
+      "(100, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# read training data - It is the aircraft engine run-to-failure data.\n",
     "train_df = pd.read_csv('../../dataset/PM_train.txt', sep=\" \", header=None)\n",
@@ -139,6 +149,7 @@
     "                     's15', 's16', 's17', 's18', 's19', 's20', 's21']\n",
     "\n",
     "train_df = train_df.sort_values(['id','cycle'])\n",
+    "print(train_df.shape)\n",
     "\n",
     "# read test data - It is the aircraft engine operating data without failure events recorded.\n",
     "test_df = pd.read_csv('../../dataset/PM_test.txt', sep=\" \", header=None)\n",
@@ -146,10 +157,12 @@
     "test_df.columns = ['id', 'cycle', 'setting1', 'setting2', 'setting3', 's1', 's2', 's3',\n",
     "                     's4', 's5', 's6', 's7', 's8', 's9', 's10', 's11', 's12', 's13', 's14',\n",
     "                     's15', 's16', 's17', 's18', 's19', 's20', 's21']\n",
+    "print(test_df.shape)\n",
     "\n",
     "# read ground truth data - It contains the information of true remaining cycles for each engine in the testing data.\n",
     "truth_df = pd.read_csv('../../dataset/PM_truth.txt', sep=\" \", header=None)\n",
-    "truth_df.drop(truth_df.columns[[1]], axis=1, inplace=True)\n"
+    "truth_df.drop(truth_df.columns[[1]], axis=1, inplace=True)\n",
+    "print(truth_df.shape)\n"
    ]
   },
   {
